--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
 	"name": "cordova-test",
 	"version": "0.0.1",
 	"dependencies": {
-		"twitter-bootstrap-sass": "3.3.3"
+      "bootstrap-sass-official": "3.3.3",
+      "bootstrap-material-design": "0.2.2"
 	}
 }
