--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "cordova-test",
   "version": "1.0.0",
   "private": true,
-
   "dependencies": {
     "jquery": "2.1.3",
     "react": "0.12.2",
     "react-router": "0.12.4"
   },
-
   "devDependencies": {
-  	"cordova": "4.3.0",
-  	"grunt": "0.4.5",
-  	"grunt-cli": "0.1.13",
-  	"load-grunt-tasks": "1.0.0",
-  	"grunt-contrib-connect" : "0.9.0",
-    "grunt-contrib-copy": "0.8.0",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-sass": "0.18.0",
-    "grunt-browserify": "3.5.0",
+    "cordova": "4.3.0",
+    "cucumber": "0.4.8",
+    "grunt": "0.4.5",
     "grunt-bower-task": "0.4.0",
-    "grunt-contrib-watch": "*"
+    "grunt-browserify": "3.5.0",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-connect": "0.9.0",
+    "grunt-contrib-copy": "0.8.0",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-npm-install": "^0.2.0",
+    "grunt-sass": "0.18.0",
+    "grunt-shell": "1.1.2",
+    "load-grunt-tasks": "1.0.0",
+    "reactify": "1.0.0",
+    "selenium-webdriver": "2.45.1"
   }
 }
